# how_to_create_algorand_contracts_with_python

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
READMEs/: README.walkthrough_of_1st_setup.md  README.walkthrough_of_2nd_setup.md
data/: temperature_data.csv
src/: main.py
tests/: test_example.py
